--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
+
 <head>
-  <meta charset="utf-8">
   <title>Women Game Jam Bolivia</title>
   <base href="/">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1">
 </head>
+
 <body>
   <wgj-root></wgj-root>
 </body>
+
 </html>
