--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- TODO: Change this favicon when design gives us the final one -->
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1">
 </head>
 
