--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,17 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos.">
+  <meta name="keywords" content="women game jam bolivia, wome game jam, bolivia, cochabamba">
+  <meta name="og:title" content="Wome Game Jam Bolivia">
+  <meta name="og:image" content="assets/images/logo-wgj.png">
+  <meta name="og:site_name" content="Women Game Jam Bolivia">
+  <meta name="og:description"
+    content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos.">
   <!-- TODO: Change this favicon when design gives us the final one -->
   <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1">
+  <link rel="canonical" href="https://wgj.gdg.com.bo">
 </head>
 
 <body>
