--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,30 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js';
+      import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.9.0/firebase-analytics.js';
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: 'AIzaSyDxhKEekMt3WiDeXcCi9EbGeVd1SDdjI3U',
+        authDomain: 'wgj-website-2022.firebaseapp.com',
+        projectId: 'wgj-website-2022',
+        storageBucket: 'wgj-website-2022.appspot.com',
+        messagingSenderId: '924233668390',
+        appId: '1:924233668390:web:0a5bf89c3f6a1f2a1f13e7',
+        measurementId: 'G-XFC3ZQ8T5S',
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </head>
   <body>
     <wgj-root></wgj-root>
