--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,22 @@
 
     <script type="module">
       // Import the functions you need from the SDKs you need
-      import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js';
-      import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.9.0/firebase-analytics.js';
+      import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js';
+      import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-analytics.js';
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
 
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
       const firebaseConfig = {
-        apiKey: 'AIzaSyDxhKEekMt3WiDeXcCi9EbGeVd1SDdjI3U',
-        authDomain: 'wgj-website-2022.firebaseapp.com',
-        projectId: 'wgj-website-2022',
-        storageBucket: 'wgj-website-2022.appspot.com',
-        messagingSenderId: '924233668390',
-        appId: '1:924233668390:web:0a5bf89c3f6a1f2a1f13e7',
-        measurementId: 'G-XFC3ZQ8T5S',
+        apiKey: 'AIzaSyD9zWHnGBdxml5lhikxFs0C9RrK7Y9DFwo',
+        authDomain: 'wgj-bolivia.firebaseapp.com',
+        databaseURL: 'https://wgj-bolivia.firebaseio.com',
+        projectId: 'wgj-bolivia',
+        storageBucket: 'wgj-bolivia.appspot.com',
+        messagingSenderId: '791814253213',
+        appId: '1:791814253213:web:0e2dc18b4fe3ea6ba7c274',
+        measurementId: 'G-HTMS6V57DM',
       };
 
       // Initialize Firebase
