Added prettier and husky configuration.

--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
+  <head>
+    <title>Women Game Jam Bolivia</title>
+    <base href="/" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos."
+    />
+    <meta
+      name="keywords"
+      content="women game jam bolivia, wome game jam, bolivia, cochabamba"
+    />
+    <meta name="og:title" content="Wome Game Jam Bolivia" />
+    <meta name="og:image" content="assets/images/logo-wgj.png" />
+    <meta name="og:site_name" content="Women Game Jam Bolivia" />
+    <meta
+      name="og:description"
+      content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos."
+    />
+    <!-- TODO: Change this favicon when design gives us the final one -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1" />
+    <link rel="canonical" href="https://wgj.gdg.com.bo" />
+  </head>
 
-<head>
-  <title>Women Game Jam Bolivia</title>
-  <base href="/">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"
-    content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos.">
-  <meta name="keywords" content="women game jam bolivia, wome game jam, bolivia, cochabamba">
-  <meta name="og:title" content="Wome Game Jam Bolivia">
-  <meta name="og:image" content="assets/images/logo-wgj.png">
-  <meta name="og:site_name" content="Women Game Jam Bolivia">
-  <meta name="og:description"
-    content="Participa y desarrolla tu creatividad e imaginación en un Game Jam online junto a más chicas creando tus propios juegos.">
-  <!-- TODO: Change this favicon when design gives us the final one -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1">
-  <link rel="canonical" href="https://wgj.gdg.com.bo">
-</head>
+  <body>
+    <wgj-root></wgj-root>
 
-<body>
-  <wgj-root></wgj-root>
+    <!-- AddEvent script -->
+    <script
+      type="text/javascript"
+      src="https://addevent.com/libs/atc/1.6.1/atc.min.js"
+      async
+      defer
+    ></script>
 
-  <!-- AddEvent script -->
-  <script type="text/javascript" src="https://addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
-
-  <!-- AddEvent settings -->
-  <script type="text/javascript">
-    window.addeventasync = () => {
-      addeventatc.settings({
-        facebook: {
-          show: true,
-          text: 'Facebook',
-        },
-        google: {
-          show: true,
-          text: 'Google',
-        },
-        appleical: {
-          show: true,
-          text: 'Apple Calendar',
-        },
-        dropdown: {
-          order: 'facebook,google,appleical'
-        },
-        css: false,
-      });
-    };
-
-  </script>
-</body>
-
+    <!-- AddEvent settings -->
+    <script type="text/javascript">
+      window.addeventasync = () => {
+        addeventatc.settings({
+          facebook: {
+            show: true,
+            text: 'Facebook',
+          },
+          google: {
+            show: true,
+            text: 'Google',
+          },
+          appleical: {
+            show: true,
+            text: 'Apple Calendar',
+          },
+          dropdown: {
+            order: 'facebook,google,appleical',
+          },
+          css: false,
+        });
+      };
+    </script>
+  </body>
 </html>
