--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,32 @@
   <body>
     <wgj-root></wgj-root>
 
+    <!-- Analytics Configuration -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js';
+      import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.9.1/firebase-analytics.js';
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: 'AIzaSyD9zWHnGBdxml5lhikxFs0C9RrK7Y9DFwo',
+        authDomain: 'wgj-bolivia.firebaseapp.com',
+        databaseURL: 'https://wgj-bolivia.firebaseio.com',
+        projectId: 'wgj-bolivia',
+        storageBucket: 'wgj-bolivia.appspot.com',
+        messagingSenderId: '791814253213',
+        appId: '1:791814253213:web:0e2dc18b4fe3ea6ba7c274',
+        measurementId: 'G-HTMS6V57DM',
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
+
     <!-- AddEvent script -->
     <script
       type="text/javascript"
