--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
     <!-- TODO: Change this favicon when design gives us the final one -->
     <link rel="icon" type="image/x-icon" href="favicon.ico?v=0.1" />
     <link rel="canonical" href="https://wgj.gdg.com.bo" />
-  </head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 
   <body>
     <wgj-root></wgj-root>
